# xmonadrc

./: .gitignore  .hlint.yaml  Makefile  README.md  default.nix  shell.nix  xmonadrc.cabal
app/: voice-server.hs  xmonad.hs
src/: Voice.hs  XMonadrc.hs
